maze.lessons.maze.island.IslandMaze.scala.error
Escaper:24: error: not found: value keepHandOnSidewall
			keepHandOnSidewall()
                        ^