maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
	def murAgauche() : Boolean ={
	var mur :Boolean = false
	gauche()
	if (estFaceMur()) {mur = true}
	droite()
	return mur }
	var maxx = getMondeHauteur()
	var maxy = getMondeLargeur()

	 def AtteintBord() :Boolean = {
	 	(getX() == 0 || getY() == maxy) || (getY() == 0 || getX() == maxx)}

	 def keepHandOnSideWall() {
		while (!murAgauche) {gauche()}
		if (estFaceMur()) {droite()}
		else {avance() 
			if (!murAgauche) {gauche() ;avance()}
				if (!murAgauche) {gauche();avance()}
		}}
	def chercheBord() {
		while (!AtteintBord) {
			keepHandOnSidewall()
	}
	while (!murAgauche) {droite()}
	keepHandOnSideWall()
	}

	
while(!estSurBiscuit()){
		chercheBord()
}
prendBiscuit();


}
